sandbox/output
StringCalculatorTest.java:40: error: cannot find symbol
        int expected = x;
                       ^
  symbol:   variable x
  location: class StringCalculatorTest
1 error
